# Basenames

./: .gitignore  Basenames.cabal  README.md
app/: Main.hs
lib/: Basenames.hs
