cabal-version:      3.4
name:               Basenames
version:            0.1.0.0
synopsis:
    A base naming system that's not decimal-centric invented by jan Misali.

-- description:
homepage:           github.com/Demonstrandum/Basenames
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Demonstrandum
maintainer:         samuel@knutsen.co
-- copyright:
category:           Math
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Basenames
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.14 && < 5
                    , primes ^>= 0.2
    hs-source-dirs:   lib
    default-language: GHC2021

executable Basenames
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base >= 4.14 && < 5
        , Basenames

    hs-source-dirs:   app
    default-language: GHC2021
